# KKCODER

./: .gitignore  AGENTS.md  CLAUDE.md  MINIMALIST_DESIGN_PARADIGM.md  README.md  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.json  vite.config.ts  主题样式_spec.md  启动应用.bat  打包应用.bat
.claude/: settings.local.json
.codex/: config.toml
.cursor/rules/: source-index.mdc
.trellis/: .gitignore  .template-hashes.json  workflow.md
.trellis/scripts/: task.py
docs/: 待办事项.md  服务器部署指令.md  远程访问实现方案.md
src/: App.css  App.tsx  SOURCE_INDEX.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/native_terminal/: boundary.rs  command.rs  manager.rs  mod.rs
src-tauri/src/remote/: auth.rs  conversation.rs  frp.rs  handlers.rs  mod.rs  server.rs  session_actor.rs  state.rs  tui_detector.rs  tui_watcher.rs  ws.rs
src/components/: AppToastHost.tsx  CloseConfirmModal.tsx  ConfirmModal.tsx  DiffPanel.tsx  DirectoryPickerModal.css  DirectoryPickerModal.tsx  FileEditorModal.tsx  FilePreviewPanel.tsx  MdEditorModal.tsx  NativeTerminalRouting.test.ts  NativeTerminalTab.css  NativeTerminalTab.test.ts  NativeTerminalTab.tsx  NewSessionModal.tsx  ProjectTree.tsx  ProjectTreeBindingBar.tsx  RemoteSettingsPanel.tsx  SessionRestorePrompt.tsx  SessionTabBar.tsx  SettingsModal.tsx  Sidebar.tsx  TabContextMenu.tsx  TerminalTab.tsx  TitleBar.tsx  index.ts
src/hooks/: index.ts  useAppFeedback.ts  useSessions.ts  (+12 more)
tests/: sessionTitle.test.mjs  unreadCompletions.test.mjs
(+48 files in other folders)
